# EGL_and_training_set

./: .gitignore  README.md  pyproject.toml
2606/: 01_EGL_preparation.ipynb  02_training_set.ipynb  03_nearest_tss_evaluation.ipynb  04_nonnearestTSS_predictability.ipynb  training_set_report.md  training_set_report.pptx
archive/: 01_FM_playground.ipynb  test_trans_pqtl_coloc_feature.ipynb
archive/2503_release/: 01_new_EGL_and_training_set.ipynb  20241023_release_data_playground.ipynb  20241120_eQTLcatalogue_pathc.ipynb
archive/2506_release/: 03_nearest_gene_calculation.ipynb  04_bugs_in_FM_playground.ipynb  06_playing_with_xgboost.R  07_drug_target_enrichment.ipynb  08_run_predictions_in_R.R
archive/2509_release/: 01_comparison_with_previous.ipynb
archive/2512_release/: 01_first_runs.ipynb
archive/gentropy_paper/: 01_study_index_teraputic_areas.ipynb  01a_the_list_of_qulifying_studies.ipynb  01c_the_list_of_assosiated_genes.ipynb  01d_the_max_feature_value_per_CS.ipynb  01e_preparing_pharmacoporject_data.ipynb  03_using_training_set_for_FDR.ipynb  05_scaled_betas_playground_Szymons_table.ipynb  11_combining_evidence_from_l2g_eQTLs_protein_coding.ipynb  12_importnace_of_secondary_signals.ipynb  13_enrichment_playground.ipynb  15_fitness_score.ipynb  16_drug_target_enrichment.ipynb  17_making_evidence_for_pleyotropy.ipynb  18_temporal_drug_enrichment.ipynb  19_temporal_l2g_improvements.ipynb  20_plots_for_constrain_vs_pliotropy.ipynb  21_ways_to_calculate_the_pleitropy.ipynb  22_data_for_polina.ipynb  23_strata_of_genes_by_PS_FS_enrichment.ipynb  24_real_ps.ipynb  (+6 more)
(+68 files in other folders)
