[project]
name = "egl-and-training-set"
version = "0.1.0"
description = "EGL and training set analysis"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "altair>=5.5.0",
    "dask>=2025.11.0",
    "gentropy>=2.4.1",
    "ipython>=9.0.2",
    "jupyterlab>=4.3.6",
    "marimo>=0.14.16",
    "narwhals>=1.35.0",
    "notebook>=7.3.3",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "pandas-stubs>=2.3.0.250703",
    "plotly>=5.24.1",
    "plotnine==0.15.1",
    "polars>=1.26.0",
    "pre-commit>=4.2.0",
    "requests>=2.32.3",
    "scipy>=1.11.4",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/egl_training_methods"]


[tool.ruff.lint]
select = ["D", "I", "E"]
ignore = [
    "E501",
    "E731",
    "D107",
    "D101",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.7.0",
]

[tool.pytest.ini_options]
addopts = "-n auto --doctest-modules --cov=src/ --cov-report=xml --cache-clear"
pythonpath = ["."]
testpaths = ["tests", "src/egl_training_methods"]
markers = ["step_test"]
